# crs-gemini-cli

./: .dockerignore  .gitignore  README.md  patcher.py  pyproject.toml
agents/: gemini_cli.md  gemini_cli.py  template.py
agents/sections/: bug_candidates_absent.md  bug_candidates_present.md  diff_present.md  pov_absent.md  pov_present.md  pre_submit.md  seed_present.md  workflow_pov.md  workflow_static.md
oss-crs/: base.Dockerfile  builder.Dockerfile  crs.yaml  docker-bake.hcl  example-compose.yaml  patcher.Dockerfile
tests/: conftest.py  test_gemini_cli.py  test_setup_source.py
