[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crs-gemini-cli"
version = "1.0.0"
description = "CRS using Gemini CLI for autonomous vulnerability patching"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
run_patcher = "patcher:main"

[tool.setuptools]
py-modules = ["patcher"]

[tool.setuptools.packages.find]
include = ["agents", "agents.*"]

[tool.setuptools.package-data]
agents = ["*.md", "sections/*.md"]
